[TASK] Add missing delete button for Documentation
Add a  missing delete button within the Documentation module. Right now,
a user can't delete previously downloaded documentation.

Resolves: #80575
Releases: master, 8.7
Change-Id: I9077270c66ec225f1eb7a26e505da0d98d5f7f0e
Reviewed-on: https://review.typo3.org/54845
Tested-by: TYPO3com <no-reply@typo3.com>
Reviewed-by: Susanne Moog <susanne.moog@typo3.org>
Tested-by: Susanne Moog <susanne.moog@typo3.org>

--- a/Resources/Private/Language/locallang.xlf
+++ b/Resources/Private/Language/locallang.xlf
@@ -93,11 +93,21 @@
 			<trans-unit id="downloadFailedDetails">
 				<source>The documentation for "%s" could not be downloaded, because of the following error: %s (%d).</source>
 			</trans-unit>
-
+			<trans-unit id="deleteModalDescription">
+				<source>Are you sure you want to delete this record?</source>
+			</trans-unit>
+			<trans-unit id="cancel">
+				<source>Cancel</source>
+			</trans-unit>
+			<trans-unit id="delete">
+				<source>Delete</source>
+			</trans-unit>
+			<trans-unit id="deleteFailed">
+				<source>Deletion of documentation failed.</source>
+			</trans-unit>
 			<trans-unit id="documentationList.search">
 				<source>Search</source>
 			</trans-unit>
-
 		</body>
 	</file>
 </xliff>
